# lab-6

./: .gitignore  README.md
docker/: Dockerfile  forReference.txt  (+1 more)
src/aruco_interfaces/: CMakeLists.txt  package.xml
src/aruco_interfaces/action/: GetArucoPose.action
src/ur3e_hande/ur3e_hande_gz/: CMakeLists.txt  package.xml
src/ur3e_hande/ur3e_hande_gz/config/: bridge.yaml
src/ur3e_hande/ur3e_hande_gz/launch/: view_gz.launch.py
src/ur3e_hande/ur3e_hande_gz/models/: cuboid.sdf
src/ur3e_hande/ur3e_hande_gz/models/Cole_Hardware_Plant_Saucer_Brown_125/: metadata.pbtxt  model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/Cole_Hardware_Plant_Saucer_Brown_125/meshes/: model.mtl
src/ur3e_hande/ur3e_hande_gz/models/SquareShelf/: model.sdf
src/ur3e_hande/ur3e_hande_gz/models/aruco_box/: model.sdf
src/ur3e_hande/ur3e_hande_gz/models/aruco_cube_80/: model.config
src/ur3e_hande/ur3e_hande_gz/models/black_storage_bin/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/bolt/: model.sdf
src/ur3e_hande/ur3e_hande_gz/models/camera_mount/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/coke_can/: model.sdf
src/ur3e_hande/ur3e_hande_gz/models/cube/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/cuboid/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/cylinder/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/d435_mount/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/d435_mount/meshes/: d435_mount.stl
src/ur3e_hande/ur3e_hande_gz/models/d435i/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/ecoforms_container/: metadata.pbtxt  model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/hande/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/inspire_hand_right/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/leap_hand_right/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/plastic_cup/: model.sdf
src/ur3e_hande/ur3e_hande_gz/models/shelf/: model.config
src/ur3e_hande/ur3e_hande_gz/models/side_extrusion_20/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/side_extrusion_20/meshes/: side_extrusion_20.mtl  side_extrusion_20_new.mtl
src/ur3e_hande/ur3e_hande_gz/models/side_extrusion_40/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/side_extrusion_40/meshes/: side_extrusion_40.stl
src/ur3e_hande/ur3e_hande_gz/models/spam_can/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/sphere/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/table_or/: model.sdf
src/ur3e_hande/ur3e_hande_gz/models/ur3e/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/ur3e_leap_hand_right/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/models/vention_table/: model.config  model.sdf
src/ur3e_hande/ur3e_hande_gz/scripts/: sensor_tf_listener.py
src/ur3e_hande/ur3e_hande_gz/worlds/: aruco.sdf  basic.sdf  bookshelf.sdf  smallbox.sdf
(+109 files in other folders)
